# mcp-bmad-method

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md
.github/workflows/: ci.yml  release.yml
example/: cursor_mcp.json
mcp-bmad-server/: Cargo.toml
mcp-bmad-server/data/: llms-full.txt
mcp-bmad-server/src/: bmad_index.rs  main.rs  tests.rs
mcp-bmad-server/templates/: architecture.enterprise.md  architecture.md  devops.md  epic.md  prd.enterprise.md  prd.md  project-context.bmad_method.md  project-context.enterprise.md  project-context.quick_flow.md  security.md  sprint-plan.md  tech-spec.md
npm/: .gitignore  README.md  package.json
npm/scripts/: install.js
