[package]
name = "mcp-bmad-server"
description = "MCP server for the BMad Method (Build More Architect Dreams)"
version.workspace = true
edition.workspace = true

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
