[package]
name = "mcp-bmad-server"
description = "MCP server for the BMad Method (Build More Architect Dreams)"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/antruongnguyen/mcp-bmad-method"
keywords = ["mcp", "bmad", "llm", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "io-std", "sync", "fs"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
